--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,15 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+
+<!--        <item name="android:navigationBarColor">@android:color/transparent</item>-->
+<!--        &lt;!&ndash; Optional, but recommended for full edge-to-edge rendering &ndash;&gt;-->
+<!--        <item name="android:statusBarColor">@android:color/transparent</item>-->
     </style>
 
 </resources>
