--- a/app/src/main/res/navigation/login_nav.xml
+++ b/app/src/main/res/navigation/login_nav.xml
@@ -16,7 +16,7 @@
             app:destination="@id/login_fragment" />
         <action
             android:id="@+id/action_welcome_to_register"
-            app:destination="@id/register_fragment"
+            app:destination="@id/navigation"
             app:enterAnim="@anim/slide_in_right_80"
             app:exitAnim="@anim/alpha_out"
             app:popEnterAnim="@anim/alpha_in"
@@ -27,28 +27,38 @@
         android:name="com.yangy.jetpack.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" />
-    <fragment
-        android:id="@+id/register_fragment"
-        android:name="com.yangy.jetpack.RegisterFragment"
-        android:label="fragment_register"
-        tools:layout="@layout/fragment_register">
-
-        <action
-            android:id="@+id/next_to_input_password"
-            app:destination="@id/passwordActivity" />
-    </fragment>
     <activity
-        android:id="@+id/passwordActivity"
-        android:name="com.yangy.jetpack.PasswordActivity"
-        android:label="activity_password"
-        tools:layout="@layout/activity_password">
-        <argument
-            android:name="name"
-            android:defaultValue="yangy"
-            app:argType="string" />
-        <argument
-            android:name="email"
-            android:defaultValue="yygood1000@gmail.com"
-            app:argType="string" />
-    </activity>
+        android:id="@+id/mainActivity"
+        android:name="com.yangy.jetpack.MainActivity"
+        android:label="activity_main"
+        tools:layout="@layout/activity_main" />
+    <navigation
+        android:id="@+id/navigation"
+        app:startDestination="@id/register_fragment">
+        <fragment
+            android:id="@+id/register_fragment"
+            android:name="com.yangy.jetpack.RegisterFragment"
+            android:label="fragment_register"
+            tools:layout="@layout/fragment_register">
+
+            <action
+                android:id="@+id/next_to_input_password"
+                app:destination="@id/passwordActivity" />
+        </fragment>
+
+        <activity
+            android:id="@+id/passwordActivity"
+            android:name="com.yangy.jetpack.PasswordActivity"
+            android:label="activity_password"
+            tools:layout="@layout/activity_password">
+            <argument
+                android:name="name"
+                android:defaultValue="yangy"
+                app:argType="string" />
+            <argument
+                android:name="email"
+                android:defaultValue="yygood1000@gmail.com"
+                app:argType="string" />
+        </activity>
+    </navigation>
 </navigation>
